--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
       integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="./css/style.css" />
     <title>Telasja's Portfolio</title>
   </head>
   <body>
     <nav class="navbar navbar-dark bg-dark">
-      <div class="container-fluid">
+      <div class="container-fluid responsive-nav">
         <a class="navbar-brand" href="#">
           <img src="Logo.jpg" width="100" height="50" alt="My logo" /> Portfolio
         </a>
@@ -29,10 +30,11 @@
         <!-- Add project link here -->
       </h3>
       <a id="profile-link" href="https://github.com/telasjareynolds"
-        >Profile link</a>
+        >Profile link</a
+      >
     </div>
     <nav class="navbar fixed-bottom bg-dark">
-      <div class="container-fluid">
+      <div class="container-fluid responsive-nav">
         <a class="navbar-brand" href="#">Fixed bottom</a>
       </div>
     </nav>
