made project section black

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -88,8 +88,8 @@
         <!-- Add project link here -->
       </div>
     </section>
-    <section>
-      <h2 class="work">Recent Work</h2>
+    <section class="work">
+      <h2>Recent Work</h2>
       <article>
         <div>
           <h3>Real Estate Landing Page</h3>
