added project links

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -157,21 +157,37 @@
           <div>
             <h2>Task Cards Project</h2>
             <p>
-              Collaborated group project where classmates and I have
-              successfully worked as a team to build a functional site that
-              creates task cards.
+              Colleagues and I have successfully worked as a team to build a
+              functional site that creates task cards.
             </p>
-            <a href="#">See Project</a><br />
-            <a href="" target="black">GitHub Repo</a>
+            <a
+              class="task-card"
+              href="https://laila-lay.github.io/group4project/"
+              >See Project</a
+            ><br />
+            <a
+              class="task-card"
+              href="https://github.com/Lmcmullen18/group4project.git"
+              target="black"
+            >
+              GitHub Repo
+            </a>
           </div>
+
           <div>
             <h2>Portfolio Project</h2>
             <p>
               Created a portfolio using a collage of my favorite books as the
               layout
             </p>
-            <a href="#">See Project</a><br />
-            <a href="" target="black">GitHub Repo</a>
+            <a href="https://telasjareynolds.github.io/my-portfolio/"
+              >See Project</a
+            ><br />
+            <a
+              href="https://github.com/telasjareynolds/my-portfolio.git"
+              target="black"
+              >GitHub Repo</a
+            >
           </div>
           <div>
             <h2>Netflix Project</h2>
