corrected working for task card

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -157,7 +157,7 @@
           <div>
             <h2>Task Cards Project</h2>
             <p>
-              Colleagues and I have successfully worked as a team to build a
+              Successfully worked as a team with colleagues to build a
               functional site that creates task cards.
             </p>
             <a
