make github pages function correctly

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <nav class="navbar navbar-dark bg-dark">
       <div class="container-fluid responsive-nav">
         <a class="navbar-brand" href="#" style="font-size: 30px">
-          <img src="Logo.jpg" width="200" height="130" alt="My logo" />
+          <img src="./Images/Logo.jpg" width="200" height="130" alt="My logo" />
           Portfolio
         </a>
         <ul class="navbar-nav">
@@ -97,7 +97,7 @@
       <div class="grid-item8"></div>
     </div>
     <section>
-      <img src="Headshot.jpg" class="headshot" />
+      <img src="./Images/Headshot.jpg" class="headshot" />
       <div>
         <h2 style="color: white">
           Hello! My name is Telasja Reynolds. I'm a Front-End Developer.
@@ -135,7 +135,7 @@
             </li>
             <li>
               <span><strong>USA Program(04/2022-09/2022)</strong></span
-              ><br />Web Developer
+              ><br />Certified JavaScript Developer
             </li>
           </ul>
         </div>
