--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
               <li>
                 <a
                   class="fa-brands fa-linkedin"
-                  href="www.linkedin.com/in/telasjareynolds"
+                  href="https://www.linkedin.com/in/telasjareynolds/"
                 >
                   Linkedin</a
                 >
@@ -152,51 +152,70 @@
     <!-- Add project link here -->
     <div id="projects">
       <div class="container">
-        <h1 class="subt-title">Recent Work</h1>
+        <h1 class="sub-title" style="color: bisque">Recent Work</h1>
         <div class="projects-list">
-          <div>
-            <h2>Task Cards Project</h2>
-            <p>
-              Successfully worked as a team with colleagues to build a
-              functional site that creates task cards.
-            </p>
-            <a
-              class="task-card"
-              href="https://laila-lay.github.io/group4project/"
-              >See Project</a
-            ><br />
-            <a
-              class="task-card"
-              href="https://github.com/Lmcmullen18/group4project.git"
-              target="black"
-            >
-              GitHub Repo
-            </a>
+          <div class="work">
+            <div class="layer">
+              <h2>Task Cards Project</h2>
+              <img
+                src="./Images/projecttaskcard.png"
+                height="100%"
+                width="100%"
+              />
+              <p>
+                Successfully worked as a team with colleagues to build a
+                functional site that creates task cards.
+              </p>
+              <a href="https://laila-lay.github.io/group4project/"
+                ><i class="fas fa-external-link-alt"></i></a
+              ><br />
+              <a
+                class="task-card"
+                href="https://github.com/Lmcmullen18/group4project.git"
+              >
+                GitHub Repo
+              </a>
+            </div>
           </div>
-
-          <div>
-            <h2>Portfolio Project</h2>
-            <p>
-              Created a portfolio using a collage of my favorite books as the
-              layout
-            </p>
-            <a href="https://telasjareynolds.github.io/my-portfolio/"
-              >See Project</a
-            ><br />
-            <a
-              href="https://github.com/telasjareynolds/my-portfolio.git"
-              target="black"
-              >GitHub Repo</a
-            >
+          <div class="work">
+            <div class="layer">
+              <h2>Portfolio Project</h2>
+              <img
+                src="./Images/project.portfolio.png"
+                height="100%"
+                width="100%"
+              />
+              <p>
+                Created a portfolio using a collage of my favorite books as the
+                layout
+              </p>
+              <a href="https://telasjareynolds.github.io/my-portfolio/"
+                ><i class="fas fa-external-link-alt"></i></a
+              ><br />
+              <a
+                class="group4repo"
+                href="https://github.com/telasjareynolds/my-portfolio.git"
+                >GitHub Repo</a
+              >
+            </div>
           </div>
-          <div>
-            <h2>Netflix Project</h2>
-            <p>Created a clone of Netflix using HTML, CSS, and JavaScript</p>
-            <a href="#">See Project</a><br />
-            <a href="" target="black">GitHub Repo</a>
+          <div class="work">
+            <div class="layer">
+              <h2>Netflix Project</h2>
+              <img src="" height="100%" width="100%" />
+              <p>Created a clone of Netflix using HTML, CSS, and JavaScript</p>
+              <a href="#"><i class="fas fa-external-link-alt"></i></a><br />
+              <a href="">GitHub Repo</a>
+            </div>
           </div>
         </div>
       </div>
+    </div>
+
+    <!------portfolio--------->
+
+    <div id="portfolio">
+      <div class="container"></div>
     </div>
 
     <!---------JS----->
