--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     <section>
       <img src="./Images/Headshot.jpg" class="headshot" />
       <div>
-        <h2 style="color: white">
+        <h2 style="color: bisque">
           Hello! My name is Telasja Reynolds. I'm a Front-End Developer.
         </h2>
         <p class="bio" style="color: white">
@@ -161,6 +161,7 @@
                 src="./Images/projecttaskcard.png"
                 height="100%"
                 width="100%"
+                class="work img"
               />
               <p>
                 Successfully worked as a team with colleagues to build a
@@ -184,6 +185,7 @@
                 src="./Images/project.portfolio.png"
                 height="100%"
                 width="100%"
+                class="work img"
               />
               <p>
                 Created a portfolio using a collage of my favorite books as the
@@ -202,7 +204,7 @@
           <div class="work">
             <div class="layer">
               <h2>Netflix Project</h2>
-              <img src="" height="100%" width="100%" />
+              <img src="" height="100%" width="100%" class="work img" />
               <p>Created a clone of Netflix using HTML, CSS, and JavaScript</p>
               <a href="#"><i class="fas fa-external-link-alt"></i></a><br />
               <a href="">GitHub Repo</a>
@@ -212,10 +214,57 @@
       </div>
     </div>
 
-    <!------portfolio--------->
-
-    <div id="portfolio">
-      <div class="container"></div>
+    <!--------------contact me box---------->
+    <div id="contact">
+      <div class="container">
+        <div class="row">
+          <div class="contact-left">
+            <h1 class="sub-title" style="color: bisque">Contact Me</h1>
+            <p class="contact-text">
+              <i class="fa-solid fa-paper-plane" style="color: white"></i
+              >telasjareynolds@gmail.com
+            </p>
+            <p class="contact-text">
+              <i class="fa-solid fa-square-phone" style="color: white"></i
+              >(419)699-0516
+            </p>
+            <div class="social-icons">
+              <a href="https://www.linkedin.com/in/telasjareynolds/"
+                ><i class="fa-brands fa-linkedin"></i
+              ></a>
+              <a href="https://github.com/telasjareynolds"
+                ><i class="fa-brands fa-github"></i
+              ></a>
+            </div>
+            <a href="./assets/RESUME__TELASJA.pdf" download class="btnn"
+              >Download Resume</a
+            >
+          </div>
+          <div class="contact-right">
+            <form>
+              <input type="text" name="Name" placeholder="Your Name" required />
+              <input
+                type="email"
+                name="email"
+                placeholder="Your Email"
+                required
+              />
+              <textarea
+                name="Message"
+                rows="6"
+                placeholder="Your Message"
+              ></textarea>
+              <button type="submit" class="btnn">Submit</button>
+            </form>
+          </div>
+        </div>
+      </div>
+      <div class="copyright">
+        <p>
+          Copyright @ Telasja. Made with <i class="fas fa-heart"></i> HTML, CSS,
+          and JavaScript
+        </p>
+      </div>
     </div>
 
     <!---------JS----->
@@ -239,26 +288,6 @@
 
   <!--Footer-->
   <footer>
-    <nav class="navbar fixed-bottom bg-dark">
-      <div class="container-fluid responsive-nav">
-        <a
-          href="assets\Resume\RESUME__TELASJA.pdf"
-          download
-          class="navbar-brand"
-          href="#"
-          style="color: white"
-          >Resume</a
-        >
-        <!--Contact me box-->
-        <a
-          id="profile-link"
-          href="https://github.com/telasjareynolds"
-          class="links"
-          style="color: white"
-          >Profile link</a
-        >
-      </div>
-    </nav>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
