Kathryn helped manipulate collage

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="collage.css" />
     <title>Telasja's Portfolio</title>
     <script
       src="https://kit.fontawesome.com/54a148a2b4.js"
